tests/wordpress/fail/plugins/skysa-official/skysa.php
<?php
/*
Plugin Name: Skysa App Bar
Plugin URI: http://wordpress.org/extend/plugins/skysa-official/
Description: Skysa App Bar settings plugin
Version: 1.03
Author: Skysa
Author URI: http://www.skysa.com
*/
